--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/dev-api';
 VUE_APP_CONFIG_API = http://172.20.200.121:8081
+VUE_APP_MOCK_SERVER = http://172.20.200.121:8085
