--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 **/*.log
-
+*.rar
+*.zip
 tests/**/coverage/
 tests/e2e/reports
 selenium-debug.log
