--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,4 @@ ENV = 'production'
 # base api
 VUE_APP_BASE_API = '/prod-api'
 VUE_APP_CONFIG_API = http://172.18.1.169:8081
-MOCK_SERVER = http://172.18.1.169:8085
+VUE_APP_MOCK_SERVER = http://172.18.2.171:8085
