--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,5 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = '/dev-api';
-VUE_APP_CONFIG_API = http://192.168.1.10:8085
+VUE_APP_CONFIG_API = http://172.20.200.121:8085
+VUE_APP_CONFIG_WS = http://172.20.200.121:8090
