--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
         "jsonpath": "^1.1.1",
         "jsonpath-plus": "^7.0.0",
         "jszip": "3.2.1",
+        "marked": "^11.0.0",
+        "moment": "^2.29.4",
         "normalize.css": "7.0.0",
         "nprogress": "0.2.0",
         "path-to-regexp": "2.4.0",
+        "prismjs": "^1.29.0",
         "screenfull": "4.2.0",
         "script-loader": "0.7.2",
         "sortablejs": "1.8.4",
         "tui-editor": "1.3.3",
         "vue": "2.6.10",
         "vue-count-to": "1.0.13",
+        "vue-prism-component": "^2.0.0",
         "vue-router": "3.0.2",
         "vue-splitpane": "1.0.4",
         "vuedraggable": "2.20.0",
@@ -65,6 +69,7 @@
         "lint-staged": "8.1.5",
         "mockjs": "1.0.1-beta3",
         "plop": "2.3.0",
+        "raw-loader": "^4.0.2",
         "runjs": "4.3.2",
         "sass": "1.26.2",
         "sass-loader": "8.0.2",
