--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "driver.js": "0.9.5",
         "dropzone": "5.5.1",
         "echarts": "^4.8.0",
-        "element-ui": "2.13.2",
+        "element-ui": "^2.13.2",
         "file-saver": "2.0.1",
         "fuse.js": "3.4.4",
         "js-cookie": "2.2.0",
@@ -36,6 +36,7 @@
         "nprogress": "0.2.0",
         "path-to-regexp": "2.4.0",
         "prismjs": "^1.29.0",
+        "recordrtc": "^5.6.2",
         "screenfull": "4.2.0",
         "script-loader": "0.7.2",
         "sortablejs": "1.8.4",
@@ -71,8 +72,8 @@
         "plop": "2.3.0",
         "raw-loader": "^4.0.2",
         "runjs": "4.3.2",
-        "sass": "1.26.2",
-        "sass-loader": "8.0.2",
+        "sass": "^1.26.2",
+        "sass-loader": "^8.0.2",
         "script-ext-html-webpack-plugin": "2.1.3",
         "serve-static": "1.13.2",
         "svg-sprite-loader": "4.1.3",
