--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,5 @@ ENV = 'production'
 
 # base api
 VUE_APP_BASE_API = '/prod-api'
-VUE_APP_CONFIG_API = http://106.55.245.162:8085
-VUE_APP_CONFIG_WS = http://106.55.245.162:8085
+VUE_APP_CONFIG_API = http://localhost:8085
+VUE_APP_CONFIG_WS = ws://localhost:8090
